@@ -238,3 +238,4 @@ version 5.0.0
 -- its now possible to create a shared mount point when unlocking a volume in zuluCrypt-gui
 -- its now possible to unlock VeraCrypt volumes from favorite feature in zuluCrypt-gui
 -- add complete French translation to both zuluCrypt-gui and zuluMount-gui
+-- try to silently solve problems caused by other tools mounting zuluCrypt's encryption mapper.
